# ChangeLog for dev-java/cglib
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/cglib/ChangeLog,v 1.1 2004/12/27 14:54:56 st_lim Exp $

*cglib-2.0.2 (27 Dec 2004)

  27 Dec 2004; Lim Swee Tat <st_lim@gentoo.org> +metadata.xml,
  +cglib-2.0.2.ebuild:
  Initial add to support hibernate
